Revision history for File-Map

0.38    2011-08-21
        Taint memory maps when tainting mode is on (fixes RT#68787)
        Explicitly test error messages in "C" locale
        Give better errors on mapping zero length nonfiles
        Handle SV-flags more intelligently

0.37    2011-05-02
        Fixed permission in remap test
        Silenced warnings on modern Test::More's

0.36    2011-01-26
        Fixed tests on Windows and on perl < 5.8.7

0.35    2011-01-16
        Added proper support for PerlIO layers, in order to:
         * reliably detect crlf transformations
         * detect and handle utf8 layers
        Use sterror instead of strerror_r when the latter isn't available

0.34    2010-12-04
        Skip remap tests as soon as possible, to avoid failures on non-Linux
        Fixed anonymous mapping on Windows
        Fixed warning on perl < 5.8.8

0.33    2010-12-01
        Made remap actually useful (will now try to move the map if necesary)
        Added tests for remap
        Made code C89 compliant again
        Fixed minor issues with strerror_r
        Added Test::NoWarnings to tests

0.32    2010-11-09
        Skip localization test when localization is not availible
        Reject scalar string handles

0.31    2010-09-20
        Only add MGf_local to mg_flags if MGf_local is defined (5.8.9 and up)
        Fix memory leak in empty maps (found by Test::Valgrind)

0.30    2010-09-13
        Fixed regression in mmap_info allocation on Win32 introduced by 0.28
        Replaced Readonly by Const::Fast
        Replaced Exporter by Sub::Exporter
        Handle undefined assignment more cleanly
        Throw an exception on localization
        Demoted exception on non-binary handles a warning, added tests and documentation for this

0.29    2010-08-25
        More fixing related to RT#60710

0.28    2010-08-25
        Made truncation warning do the right thing, unbreaking it on 5.13.3+ (fixes RT#60710)