@@ -1,17 +1,12 @@
-_build
-Build
-blib
-Makefile.PL
-META.yml
-MYMETA.yml
 ppport.h
 *~
 *.bak
 *.swp
 *.tdy
 *.tar.gz
-File-Map-.*
+File-Map-*
 .git/*
 *.c
 *.o
 .ignore
+.build
