@@ -1,22 +1,0 @@
-Build.PL			Module::Build - Builds and installs Perl modules
-Changes				A list of changes of different versions of this distribution
-examples/fastsearch.pl		An example of a use case for this module
-lib/File/Map.pm			The Perl part of this library
-lib/File/Map.xs			The C/XS part of this library
-LICENSE				Information about licensing
-Makefile.PL			A passthrough builder for Module::Build
-MANIFEST			This list of files
-META.yml			A computer readable description of this distribution
-README				A file explaning what this module does, and how to build it
-t/00-load.t			A test checking if the module loads at all
-t/10-basics.t			Unit tests for the main mapping functionality
-t/10-empty.t			Unit tests for zero-sized file maps
-t/20-errors.t			Unit tests for erroneous situations
-t/20-protect.t			Unit tests for protect()
-t/20-remap.t			Unit tests for remapping
-t/20-tainting.t
-t/20-threads.t			Unit tests for the thread synchronization functions
-t/20-unicode.t			Unit tests for unicode semantics
-t/pod-coverage.t		A test checking documentation coverage
-t/pod.t				A test doing pod validation
-typemap				A typemap for off_t
