@@ -1,16 +1,0 @@
-^_build
-^Build$
-^blib
-~$
-\.bak$
-^MANIFEST\.SKIP$
-\.swp
-\.tdy
-\.tar\.gz
-File-Map-.*
-^\.git
-^lib/.*\.c$
-^lib/.*\.o$
-^.ignore
-^MYMETA.yml$
-^MYMETA\.json$
