@@ -1,0 +1,53 @@
+name    = File-Map
+author  = Leon Timmermans <fawaka@gmail.com>
+license = Perl_5
+copyright_holder = Leon Timmermans
+copyright_year   = 2008
+
+;Building
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+
+[ExecDir]
+[ShareDir]
+[ModuleBuild]
+mb_version = 0.28
+
+;Meta
+[AutoPrereqs]
+[Prereqs / BuildRequires]
+ExtUtils::CBuilder = 0
+[Prereqs / RuntimeRecommends]
+perl = 5.012
+[MetaYAML]
+[MetaJSON]
+[MetaResources]
+;[MetaProvides]
+[Repository]
+[Bugtracker]
+[Git::NextVersion]
+version_regexp = ^(.+)$
+
+;Munging
+[PkgVersion]
+;[PodWeaver]
+[Manifest]
+;[License]
+;[Readme]
+[ExtraTests]
+
+;Testing
+[Test::Compile]
+[PodSyntaxTests]
+[PodCoverageTests]
+[Test::Kwalitee]
+
+;Releasing
+[TestRelease]
+[ConfirmRelease]
+[UploadToCPAN]
+[NextRelease]
+[Signature]
+[CheckChangesHasContent]
+[@Git]
